--- a/style.css
+++ b/style.css
@@ -1,24 +1,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;700&display=swap');
-
+html{
+font-size: 15px;  
+}
 body {
   font-family: 'League Spartan', sans-serif;
   background-color: hsl(180, 52%, 96%);
   margin: 0;
   padding: 20px;
-  display: flex;
   justify-content: center;
 }
 .navbar {
-    position: fixed; 
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100px; 
     background-image: url('./images/bg-header-desktop.svg'); 
     background-size: cover; 
     background-position: center;
-    z-index: 10;
     background-color: hsl(180, 8%, 52%);
   }
   
@@ -42,7 +39,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin-top: 150px;
+  margin-top: 80px;
 }
 
 
@@ -66,6 +63,10 @@ body {
   color: hsl(180, 29%, 50%);
   cursor: pointer;
   font-weight: bold;
+  padding: .4rem;
+}
+.remove-filter:hover{
+  background-color: black;
 }
 
 .clear-btn {
