--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
     background-color: hsl(180, 8%, 52%);
   }
   
-  
 #filters-bar {
   display: flex;
   justify-content: space-between;
@@ -32,9 +31,8 @@ body {
   margin: -25px 0 0 0; 
   width: 100%;
   max-width: 770px;
+  display: none;
 }
-
-
 .container {
   display: flex;
   flex-direction: column;
@@ -77,9 +75,6 @@ body {
   font-weight: bold;
   cursor: pointer;
 }
-
-
-
   .job-listings {
     width: 100%;
     max-width: 800px;
@@ -100,8 +95,7 @@ body {
     align-items: center;
     border-radius: 5px;
     position: relative;
-  }
-  
+  } 
   .job-card img {
     width: 50px;
     height: 50px;
